# CvxCompress

./: .gitignore  .gitmodules  Block_Copy.cpp  Block_Copy.hxx  CMakeLists.txt  Compress_Guojians_Stuff.cpp  Compress_SEAM_Basin.cpp  Compress_SEGY.cpp  Compress_Sams_Stuff.cpp  CvxCompress.cpp  CvxCompress.hxx  CvxCompress_GenCode.cpp  CvxCompress_Test.cpp  Ds79_Base.cpp  LICENSE.md  README.md  Read_Raw_Volume.cpp  Read_Raw_Volume.hxx  Run_Length_Encode_Slow.cpp  Run_Length_Escape_Codes.hxx  Test_Compression.cpp  Test_With_Generated_Input.cpp  Wavelet_Transform_Fast.cpp  Wavelet_Transform_Fast.hxx  Wavelet_Transform_Slow.cpp  Wavelet_Transform_Slow.hxx  check_4th_gen_intel_core_features.cpp  gen_empty_volume.cpp  makefile  makefile.gcc
.github/workflows/: ci.yaml  cmake.yaml
Acoustic/: Attribute_Reader.cpp
Acoustic/CPU/: Acoustic_Kernels_Common.cpp  Attribute_Transformer.hxx  Parmfile_Reader.hxx  UVW_XYZ_Calculator.hxx  Volume_Iterator.hxx
Acoustic/GPU/: Acoustic_Earth_Model.cpp  Acoustic_Earth_Model.hxx  Acoustic_Kernels_Sponges.cpp  Attribute_Reader.cpp  Attribute_Reader.hxx  Attribute_Transformer.cpp  Attribute_Transformer.hxx  Index_Calculator.cpp  Index_Calculator.hxx  Parmfile_Reader.cpp  Parmfile_Reader.hxx  TTIDenQ_T2_GPU.cu  UVW_XYZ_Calculator.cpp  UVW_XYZ_Calculator.hxx  Volume_Iterator.cpp  Volume_Iterator.hxx  gpuAcouTTI3D.cu  makefile
CPU/: Acoustic_Earth_Model.cpp  Acoustic_Kernels_AVX.cpp  Acoustic_Kernels_Main.cpp  Index_Calculator.cpp  Index_Calculator.hxx  Parmfile_Reader.cpp  UVW_XYZ_Calculator.cpp  joe_stf_from_file.cpp  makefile
CPU/Acoustic/: Acoustic_Earth_Model.hxx  Acoustic_Kernels_SSE.cpp  Acoustic_Kernels_Util.cpp  Attribute_Reader.hxx  Volume_Iterator.cpp
Common/: Encrypt56.h  Global_Coordinate_System.cpp  Global_Coordinate_System.hxx  SEGY_File.cpp  SEGY_File.h  SEGY_Header_Structs.h  Voxet.cpp  Voxet.hxx  Voxet_Memory_Mapper.cpp  Voxet_Memory_Mapper.hxx  Voxet_Property.cpp  Voxet_Property.hxx  makefile
CvxCompress/: Block_Copy.hxx  Compress_Guojians_Stuff.cpp  Compress_Sams_Stuff.cpp  CvxCompress.cpp  CvxCompress.hxx  CvxCompress_Test.cpp  Read_Raw_Volume.cpp  Run_Length_Encode_Slow.cpp  Run_Length_Encode_Slow.hxx  Run_Length_Escape_Codes.hxx  Test_Compression.cpp  Us79_Base.cpp  Wavelet_Transform_Fast.cpp  Wavelet_Transform_Fast.hxx  makefile
Elastic/CPU/: Vanilla_Visco_Elastic_CPU_Propagator.cpp  Vanilla_Visco_Elastic_CPU_Propagator.hxx  main.cpp  makefile
Elastic/GPU/: ASCII2EBCDIC.c  ASCII2EBCDIC.h  Compute_ABC.cu  DFT.cpp  DFT.hxx  Earth_Model.cu  ElaOrthModel.cpp  ElaOrthModel.hxx  Elastic_Buffer.cpp  Elastic_Buffer.hxx  Elastic_Earth_Model_Interface.hxx  Elastic_Gather_Type.hxx  Elastic_Interpolation.hxx  Elastic_Kernels.cu  Elastic_Modeling_Job.cpp  Elastic_Modeling_Job.hxx  Elastic_Pipeline.cpp  Elastic_Pipeline.hxx  Elastic_Propagator.cpp  Elastic_Propagator.hxx  Elastic_Resampled_Trace.cpp  Elastic_Resampled_Trace.hxx  Elastic_SEGY_File.cpp  Elastic_SEGY_File.hxx  Elastic_SEGY_File_Receiver_Range.cpp  Elastic_SEGY_File_Receiver_Range.hxx  Elastic_Shot.cpp  Elastic_Shot.hxx  Elastic_Trace.cpp  Elastic_Trace.hxx  Elastic_Trace_Header.cpp  Elastic_Trace_Header.hxx  Extract_Receiver_Values.cu  Extract_Receiver_Values.hxx  Glob_Coord_Test.cpp  Global_Coordinate_System.cpp  Global_Coordinate_System.hxx  Propagate_Particle_Velocities.cu  Propagate_Particle_Velocities.hxx  Propagate_Stresses.hxx  (+17 more)
Elastic/Reference/Optimized/: FDAniQ.f90  Gorgon_SRCLOC_10_Freesurface.in  Makefile  bessi0.f90  cijrot.f90  coordGlobalToLocal.f90  coordLocalToGlobal.f90  csrElaOnKite.f90  fit.f90  gen_rec.py  generateABCFunction.f90  generateSincWeights.f90  prepWavelet.f90  readModelProperties.f90  (+9 more)
Multi_Shot/: makefile
Multi_Shot/ArrND/: ArrND.1.h  ArrND.h  ArrNDAppMastSlaveAtm.h  ArrNDAppMastSlaveMpi.h  ArrNDAppSerial.h  ArrNDReduce.h  ArrNDReduceMpi.h  ArrNDSegy.h  ArrNDTask.h
Multi_Shot/ArrNDElasticForwardModel/: ArrNDElasticForwardModel.cpp  makefile
Multi_Shot/Geom/: GeomSource.h  GeomTrace.h  GeomTraceAuxiliary.h
Multi_Shot/Utils/: ConvertSVPTable.cpp  Convert_Vp_to_TWT.cpp  DayOfYearToDate.cpp  DumpArrND.cpp  DumpTraceHeaders_Custom1.cpp  ExtractReceiver.cpp  Interactive_Coordinate_Converter_rev1.cpp  MergeShotAndReceiverASCIIFiles.cpp  Sampling_PIES_Time.cpp  makefile
(+17 files in other folders)
